WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276947
[Quirk] Send iPad Mini user agent to seatguru.com
https://bugs.webkit.org/show_bug.cgi?id=276947
Summary
[Quirk] Send iPad Mini user agent to seatguru.com
Karl Dubost
Reported
2024-07-23 05:11:54 PDT
Steps to reproduce 1. With an iPad 2. Go to
https://www.seatguru.com/airlines/United_Airlines/United_Airlines_Boeing_737-800_C.php
3. Tap on a seat Results: The seat information box briefly appears and closes right away The iPad receives the desktop version of the version which doesn't take into account an event such as touchstart. They handle only click, mouseout, mouseover. The issue can be mitigated by sending the iPad Mini User Agent, where the site is working. This needs a quirk.
Attachments
Add attachment
proposed patch, testcase, etc.
Karl Dubost
Comment 1
2024-07-23 05:12:45 PDT
rdar://97505532
Karl Dubost
Comment 2
2024-07-23 05:17:47 PDT
SeatGuru is a property of TripAdvisor. They have been contacted and let us know, that the site was not updated anymore.
Karl Dubost
Comment 3
2024-07-23 05:23:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31109
EWS
Comment 4
2024-07-23 18:56:48 PDT
Committed
281271@main
(f073a5a54b84): <
https://commits.webkit.org/281271@main
> Reviewed commits have been landed. Closing PR #31109 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug