[Quirk] Send iPad Mini user agent to seatguru.com https://bugs.webkit.org/show_bug.cgi?id=276947 rdar://97505532

Reviewed by Brent Fulgham.

This is sending an iPad Mini user agent to normal iPad in order for
seatguru.com users receives a working version of the website compatible
with touch devices. seatguru is not updated with new content after
outreach. This quirk could be removed in the future, if they make the
desktop site compatible with touch devices.

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::needsIPadMiniUserAgent):

Canonical link: https://commits.webkit.org/281271@main